// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Section List Renders Section Screen with Data 1`] = `
<View>
  <LocationHeader
    details="6 [missing \\"en.LOCATION.SECTIONS\\" translation]"
    location="Aisle 1"
  />
  <FlatList
    ListEmptyComponent={<NoSectionMessage />}
    data={
      Array [
        Object {
          "sectionId": 1,
          "sectionName": "Section 1-1",
        },
        Object {
          "sectionId": 2,
          "sectionName": "Section 1-2",
        },
        Object {
          "sectionId": 3,
          "sectionName": "Section 1-3",
        },
        Object {
          "sectionId": 4,
          "sectionName": "Section 1-4",
        },
        Object {
          "sectionId": 5,
          "sectionName": "Section 1-5",
        },
        Object {
          "sectionId": 6,
          "sectionName": "Section 1-6",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`Test Section List Renders Section Screen with Empty Data 1`] = `
<View>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.SECTIONS\\" translation]"
    location="Aisle 1"
  />
  <FlatList
    ListEmptyComponent={<NoSectionMessage />}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;
